# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyphi-gym"
description = "Gymnasium benchmark suite for evaluating robustness and multi-task performance of reinforcement learning algorithms in various discrete and continuous environments."
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Philipp Altmann", email = "philipp@hyphi.co" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "Gymnasium", "RL", "AI", "Benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    'gymnasium>=0.26',
    'pygame>=2.4',      # Render 2D
    'bpy==3.5.0',       # Render 3D
    'Pillow>=9.5',      # Save images
    'moviepy>=1.0',     # Save videos
    'matplotlib>=3.5',  # Plot heatmaps
    'mathutils>=3.3',   # Utils
    'numpy>=1.21',      # Utils
]
version = '1.0'

[project.urls]
Repository = "https://github.com/philippaltmann/hyphi-gym"

[project.entry-points."gymnasium.envs"]
__root__ = "hyphi_gym.__init__:register_envs"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
hyphi_gym = [ 
  "envs/env.fbx", 
  "assets/hyphi.png",
  "assets/HoleyGrid.png",
  "assets/Mazes.png",
]

# Linters and Test tools #######################################################

[tool.black]
safe = true

[tool.isort]
atomic = true
profile = "black"
src_paths = ["hyphi_gym", "tests"]

[tool.pyright]
include = [
    "hyphi_gym/**",
    "tests/**"
]


exclude = [
    "**/__pycache__",
]


strict = []

typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true